--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         </div>
 
         <div class="home">
-            <img src="./images/WhatsApp Image 2025-02-08 at 19.26.33_4a602119.jpg" width="300" height="200">
+            <img src="./images/WhatsApp Image 2025-02-08 at 19.26.33_4a602119.jpg"/>
 
         </div>
 
         <div class="home-content">
             <h1>I am David, a Frontend Developer</h1>
             <em><p>I am focused on improving my expertise and being better in this area of tech i cherish so much!!!</p></em>
+            <hr>
         </div>
 
         
